--- a/index.html
+++ b/index.html
@@ -11,22 +11,18 @@
     body { background-color: #e6f0fa; padding-top: 20px; }
     .book-card { transition: 0.3s; margin-bottom: 20px; height: 100%; }
     .book-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
-    .book-cover { height: 200px; object-fit: contain; background-color: #f1eeee; }
+    .book-cover { height: 200px; object-fit: contain; background-color: #f9f9f9; }
     .rating-stars { color: #ffc400; }
-     .chart-container { background: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-    .tittle-container {  background: linear-gradient(135deg, #bb83f7, #cad8f0);  color: white; border-radius: 20px; padding: 50px; margin-bottom: 50px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); } 
+    .quote-container, .chart-container { background: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
     .quote-container { background-image: url('https://i.pinimg.com/736x/ed/67/d9/ed67d977d5271d0af77a7b28cf32db43.jpg'); color: black;   border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+
     .form-container { background: white; border-radius: 10px; padding: 20px; margin-bottom: 30px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
 <div class="container">
-   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="books" role="tabpanel">
-      <div class="tittle-container mb-4 text-center">
-  <h2 class="text-center mb-4">📚 Book Store & Rating </h2>
-      </div>
-    </div>
+  <h2 class="text-center mb-4">📚 Book Store & Rating</h2>
+
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="books-tab" data-bs-toggle="tab" data-bs-target="#books" type="button" role="tab">All Books</button>
@@ -123,14 +119,13 @@ let books = [
   {bookId: 7,  title: "Sapiens", cover: "https://covers.openlibrary.org/b/id/8284312-M.jpg", author: "Yuval Noah Harari", genre: "History", rating: 4 },
   {bookId: 8,  title: "The Great Gatsby", author: "F. Scott Fitzgerald", genre: "Classic",  rating: 4, cover: "https://covers.openlibrary.org/b/id/12364437-M.jpg" },
   {bookId: 9, title: "The Catcher in the Rye", cover: "https://covers.openlibrary.org/b/id/14845128-M.jpg", author: "J.D. Salinger", genre: "Classic", rating: 3 },
-  {bookId: 10, title: "Rich Dad Poor Dad", cover: "https://covers.openlibrary.org/b/id/15108516-L.jpg", author: "Robert Kiyosaki", genre: "Finance",rating: 4 }
+  {bookId: 10, title: "Rich Dad Poor Dad", cover: "https://covers.openlibrary.org/b/id/15105801-L.jpg", author: "Robert Kiyosaki", genre: "Finance",rating: 4 }
 ];
 
 const quotes = [
   { text: "A reader lives a thousand lives before he dies.", author: "George R.R. Martin" },
   { text: "Books are a uniquely portable magic.", author: "Stephen King" },
   { text: "The more you read, the more things you know.", author: "Dr. Seuss" },
-  {text: "Books are like books, they never lie.", author: "Stephen King" },
 ];
 
 const bookList = document.getElementById("book-list");
@@ -195,8 +190,9 @@ function drawChart() {
       datasets: [{
         data: Object.values(genreCounts),
         backgroundColor: [
-          '#ff6384', '#36a2eb', '#cc65fe', '#ffce56', 
-          '#4bc0c0', '#9966ff', '#ff9f40', '#8ac249'
+        '#ffce56', '#4bc0c0', '#9966ff', '#ff9f40', '#8ac249', 
+          '#f08080', '#98fb98', '#ff00ff', '#00ff00', 
+          '#ff0000', '#0000ff', '#ff0aff'
         ]
       }]
     },
@@ -237,14 +233,3 @@ document.addEventListener("DOMContentLoaded", init);
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-https://www.pinterest.com/pin/4151824652161840/
